--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/beamy/Pictures/pxfuel.jpg
-wallpaper = , /home/beamy/Pictures/pxfuel.jpg
+preload = /home/beamy/walls/wall1.jpg
+wallpaper = , /home/beamy/walls/wall1.jpg
