--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,6 +140,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = ALT, F4, killactive,
 bind = ALT, Tab, cyclenext,
+bind = $mainMod, F, fullscreen, 0
 
 # Exit Hyprland (Win + Shift + E)
 bind = $mainMod SHIFT, E, exit,
