--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -159,6 +159,9 @@ bind = $mainMod SHIFT, right, movewindow, r
 bind = $mainMod SHIFT, up,    movewindow, u
 bind = $mainMod SHIFT, down,  movewindow, d
 
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
 ### Workspaces ###
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
