--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-monitor=eDP-1, 1920x1080@180, 0x0, 1.25
+monitor=eDP-1, 12920x1080@180, 0x0, 1.25
 
 ###################
 ### MY PROGRAMS ###
@@ -141,6 +141,7 @@ bind = $mainMod, R, exec, $menu
 bind = ALT, F4, killactive,
 bind = ALT, Tab, cyclenext,
 bind = $mainMod, F, fullscreen, 0
+bind = CTRL, T, togglefloating,
 
 # Exit Hyprland (Win + Shift + E)
 bind = $mainMod SHIFT, E, exit,
