--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -141,7 +141,7 @@ bind = $mainMod, R, exec, $menu
 bind = ALT, F4, killactive,
 bind = ALT, Tab, cyclenext,
 bind = $mainMod, F, fullscreen, 0
-bind = CTRL, T, togglefloating,
+bind = $mainMod, T, togglefloating,
 
 # Exit Hyprland (Win + Shift + E)
 bind = $mainMod SHIFT, E, exit,
