--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,9 @@
-monitor=eDP-1, 12920x1080@180, 0x0, 1.25
+################
+### MONITORS ###
+################
+
+monitor=DP-2, 1920x1080@180, 0x0, 1
+monitor=HDMI-A-1, 1280x1024@75, -1280x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -12,7 +17,8 @@ $menu = rofi -show drun
 ### AUTOSTART ###
 #################
 
-exec-once = waybar & hyprpaper
+exec-once = waybar
+exec-once = hyprpaper
 exec-once = nm-applet & blueman-applet
 
 #############################
@@ -29,79 +35,31 @@ env = HYPRCURSOR_SIZE,24
 general {
     gaps_in = 5
     gaps_out = 10
-
     border_size = 2
-
-    col.active_border = rgba(81a1c1ff)
-    col.inactive_border = rgba(2e3440ff)
-
-    resize_on_border = false
-    allow_tearing = false
+    col.active_border = rgba(7aa2f7ff)
+    col.inactive_border = rgba(24283baa)
     layout = dwindle
 }
 
 decoration {
     rounding = 0
-    rounding_power = 2
-
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-
     blur {
         enabled = true
         size = 5
         passes = 2
-        vibrancy = 0.1696
+    }
+    shadow {
+        enabled = true
+        range = 4
+        color = rgba(1a1a1aee)
     }
 }
 
 animations {
-    enabled = yes, please :)
-
-    bezier = bounceSim,0.34,1.26,0.64,1
+    enabled = yes
     bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 6.1, bounceSim, popin 50%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
-}
-
-dwindle {
-    pseudotile = true 
-    preserve_split = true 
-}
-
-master {
-    new_status = master
-}
-
-misc {
-    force_default_wallpaper = -1 
-    disable_hyprland_logo = false 
+    animation = workspaces, 1, 1.94, default, fade
 }
 
 #############
@@ -110,114 +68,72 @@ misc {
 
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    
-    # Matches xset r rate 360 25
-    # (Rate is repeats per second, Delay is ms before repeating)
-    repeat_rate = 25
-    repeat_delay = 360
-
+    follow_mouse = 1
+    sensitivity = 0
     accel_profile = flat
-    sensitivity = 0 
-
-    touchpad {
-        natural_scroll = false
-    }
 }
 
 ###################
 ### KEYBINDINGS ###
 ###################
 
-$mainMod = SUPER 
+$mod = SUPER
+$amod = ALT
+$smod = SHIFT
 
-### Applications ###
-bind = CTRL ALT, T, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, R, exec, $menu
-bind = ALT, F4, killactive,
-bind = ALT, Tab, cyclenext,
-bind = $mainMod, F, fullscreen, 0
-bind = $mainMod, T, togglefloating,
+# --- MOUSE (Moving/Resizing) ---
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
 
-# Exit Hyprland (Win + Shift + E)
-bind = $mainMod SHIFT, E, exit,
+# --- APPLICATIONS ---
+bind = CTRL $amod, t, exec, $terminal
+bind = $mod, e, exec, $fileManager
+bind = $mod, r, exec, $menu
+bind = $amod, F4, killactive
+bind = $mod $smod, q, killactive
+bind = $mod $smod, e, exit 
+bind = $mod, f, fullscreen, 0
+bind = $mod, t, togglefloating
 
-# Screenshot
-bind = , PRINT, exec, hyprshot -m region --clipboard-only
+# --- FOCUS ---
+bind = $mod, Left, movefocus, l
+bind = $mod, Right, movefocus, r
+bind = $mod, Up, movefocus, u
+bind = $mod, Down, movefocus, d
+bind = $amod, Tab, cyclenext
 
-### Window sizes and positions ###
-bind = $mainMod, left,  movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up,    movefocus, u
-bind = $mainMod, down,  movefocus, d
+# --- MOVE WINDOWS ---
+bind = $mod $smod, Left, movewindow, l
+bind = $mod $smod, Right, movewindow, r
+bind = $mod $smod, Up, movewindow, u
+bind = $mod $smod, Down, movewindow, d
 
-bind = $mainMod SHIFT, left,  movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up,    movewindow, u
-bind = $mainMod SHIFT, down,  movewindow, d
+# --- WORKSPACES ---
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
 
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bind = $mod $smod, 1, movetoworkspace, 1
+bind = $mod $smod, 2, movetoworkspace, 2
+bind = $mod $smod, 3, movetoworkspace, 3
+bind = $mod $smod, 4, movetoworkspace, 4
+bind = $mod $smod, 5, movetoworkspace, 5
+bind = $mod $smod, 6, movetoworkspace, 6
+bind = $mod $smod, 7, movetoworkspace, 7
+bind = $mod $smod, 8, movetoworkspace, 8
+bind = $mod $smod, 9, movetoworkspace, 9
+bind = $mod $smod, 0, movetoworkspace, 10
 
-### Workspaces ###
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-### Audio
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%-
-bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
-
-### Brightness (with brightnessctl)
-bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+# --- AUDIO & BRIGHTNESS ---
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
 bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-
-# Enter Resize Mode
-bind = $mainMod SHIFT, r, submap, resize
-
-submap = resize
-
-binde = , left,  resizeactive, -10 0
-binde = , right, resizeactive, 10 0
-binde = , up,    resizeactive, 0 -10
-binde = , down,  resizeactive, 0 10
-
-bind = , Return, submap, reset
-bind = , Escape, submap, reset
-bind = , catchall, submap, reset
-
-submap = reset
-
-### Gaps ###
-
-### Borders ###
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
