--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,8 @@
-preload = /home/beamy/walls/wall1.jpg
-wallpaper = , /home/beamy/walls/wall1.jpg
+wallpaper {
+    monitor = DP-2
+    path = /home/beamy/walls/wall2.jpg
+    fit_mode = cover
+}
+
+splash = false
+ipc = on
