--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,59 +1,54 @@
 {
-  "layer": "top",
-  "position": "top",
-  "margin-left": 10,
-  "margin-right": 10,
-  "margin-top": 5,
-  "modules-left": ["custom/apps", "hyprland/workspaces", "hyprland/window"],
-  "modules-right": ["tray", "battery", "pulseaudio", "clock", "custom/logout"],
+    "layer": "top",
+    "position": "top",
+    "height": 34,
+    "margin-top": 6,
+    "margin-left": 10,
+    "margin-right": 10,
+    "spacing": 4,
 
-  "custom/apps": {
-    "format": "󰍜 Apps",
-    "on-click": "rofi -show drun"
-  },
+    "modules-left": ["custom/launcher", "hyprland/workspaces", "hyprland/window"],
+    "modules-center": [],
+    "modules-right": ["pulseaudio", "tray", "clock", "custom/exit"],
 
-  "hyprland/workspaces": {
-    "format": "{name}",
-    "on-click": "activate"
-  },
-
-  "custom/logout": {
-    "format": "󰗼 Exit",
-    "on-click": "hyprctl dispatch exit"
-  },
-
-  "clock": {
-    "format": "  {:%H:%M %d/%m/%Y}",
-    "tooltip-format": "{:%A, %B %d %Y}"
-  },
-
-  "hyprland/window": {
-    "format": "{}",
-    "max-length": 30,
-    "tooltip": false
-  },
-
-  "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "tooltip": false,
-    "scroll-step": 5,
-    "on-click": "pavucontrol",
-    "icons": {
-      "muted": " ",
-      "default": [" ", " ", " "]
-    }
-  },
-
-  "battery": {
-    "states": {
-      "warning": 30,
-      "critical": 15
+    "custom/launcher": {
+        "format": "",
+        "on-click": "rofi -show drun",
+        "tooltip": false
     },
-    "format": "{icon} {capacity}%",
-    "format-icons": [" ", " ", " ", " ", " "]
-  },
 
-  "tray": {
-    "spacing": 10
-  }
+    "hyprland/workspaces": {
+        "format": "{name}",
+        "on-click": "activate"
+    },
+
+    "hyprland/window": {
+        "format": "󱂬 {title}",
+        "separate-outputs": true,
+        "max-length": 30
+    },
+
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "format-muted": "󰝟",
+        "format-icons": {
+            "default": ["󰕾"]
+        }
+    },
+
+    "tray": {
+        "icon-size": 18,
+        "spacing": 10
+    },
+
+    "clock": {
+        "format": "{:%H:%M}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+    },
+
+    "custom/exit": {
+        "format": "",
+        "on-click": "hyprctl dispatch exit",
+        "tooltip": false
+    }
 }
