--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,6 +73,12 @@ input {
     accel_profile = flat
 }
 
+input {
+    repeat_rate  = 25
+    repeat_delay = 360
+}
+
+
 ###################
 ### KEYBINDINGS ###
 ###################
